--- a/md/231021/08.md
+++ b/md/231021/08.md
@@ -41,7 +41,7 @@ switch optionValue {
 }
 ```
 
-## `??` nil-coalescing operator
+## `??` 기본연산자 (nil-coalescing operator)
 
 옵셔널값이 nil일때 기본값을 제공하고 싶은 경우 사용한다.
 
@@ -49,7 +49,7 @@ switch optionValue {
 let nonOptionValue = optionValue ?? defaultValue
 ```
 
-## `!` forced upwrapping 
+## `!` 강제 언래핑 (forced upwrapping)
 
 옵셔널 값을 강제로 언래핑한다.
 만약 옵셔널 값이 nil인 경우 런타임 오류가 발생하기 때문에 주의해서 사용해야 한다.
